# analyze-folder-for-llm

./: .gitignore  .pylintrc  CONTRIBUTING.md  MANIFEST.in  README.md  copy_py_files.py  publish.sh  pyproject.toml  requirements.txt  setup.py
src/analyze_folder_for_llm/: __init__.py  main.py  preset.yaml
tests/: test_folder_analyzer.py
